* V2.0.1.1
  * Added --print_skip_stats to ck run benchmark to reduce output for MLPerf benchmarks
  * Removed several data zips that are not required for the releases

* V2.0.1
  * Updated deprecated function in web server to support Python 3.8+
  * We now use Python to generate ck and ck.bat scripts!
    If you install CK for different python versions, 
    you can use a specific one as follows:
    python3.7 -m ck version

* V2.0.0
  * We now use Apache 2.0 license based on the feedback from the majority of users
  * The code did not change from the last version 1.55.16.
  * We plan to focus on incubating projects (see "incubator" directory)
    to redesign CK and make it simpler, faster and more Pythonic - 
    we plan to use version 3.x for the new design.
    
========================================================================================

* V1.55.17
  * fixed a bug in module:package when reinstalling existing package

* V1.55.16
  * fixed a bug in module:env.
  * added more MLPerf tests from https://github.com/ctuning/ck-ml to find above bug.
  * detect packages with problems and print notes how to solve them
    (useful for ImageNet 2012 packages where direct download is no longer available)

* V1.55.15
  * added module:docs to be more compatible with standard repos
  * added LICENSE.third-party.txt

* V1.55.14
  * improved error reporting in packages and programs

* V1.55.13  
  * print "Enter -1 to use CK packages" when detecting soft
    to install CK packages instead of detecting 
    already installed software

* V1.55.12
  * added module:doc to the distribution

* V1.55.11
  * Test environment variable "CK_SKIP_SAVING_PYTHON_BIN" during CK installation
    to skip detecting and recording python binary to ck-python.cfg
    to avoid mixing up virtual environments.
  * When CK_PYTHON is defined during CK installation,
    record it to ck-python.cfg to preserve the default version.

* V1.55.10