@@ -1,5 +1,6 @@
 * V2.0.1.1
-  * Added --print_skip_stats to ck run benchmark to reduce output for MLPerf benchmarks
+  * Added --print_skip_stats to "ck run benchmark" to reduce output for MLPerf benchmarks
+  * Added --print_files to "ck run benchmark" to print multiple files after MLPerf benchmarking
   * Removed several data zips that are not required for the releases
 
 * V2.0.1
